# rusty-gasket

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-ergonomics.md  architecture.md  authentication.md  caching.md  configuration.md  database.md  error-handling.md  getting-started.md  middleware.md  observability.md  plugin-guide.md  testing.md
examples/bench-api/: Cargo.toml
examples/bench-api/benches/: throughput.rs
examples/bench-api/src/: lib.rs  main.rs
examples/recipe-api/: Cargo.toml
examples/recipe-api/src/: lib.rs  main.rs  routes.rs
examples/recipe-api/tests/: e2e.rs
examples/sample-api/: Cargo.toml
examples/sample-api/src/: lib.rs  main.rs  routes.rs
examples/sample-api/tests/: e2e.rs
rusty-gasket/: Cargo.toml  README.md  build.rs
rusty-gasket-macros/: Cargo.toml  README.md
rusty-gasket-macros/src/: api_error.rs  lib.rs
rusty-gasket/src/: cache.rs  config.rs  error.rs  extract.rs  health.rs  jobs.rs  lib.rs  middleware.rs  observability.rs  openapi.rs  otel.rs  pipeline.rs  plugin.rs  presets.rs  rate_limit.rs  server.rs  templates.rs
rusty-gasket/src/auth/: audit.rs  backend.rs  chain.rs  context.rs  error.rs  extractors.rs  identity.rs  middleware.rs  mod.rs  policy.rs
rusty-gasket/src/auth/backends/: api_key.rs  basic_auth.rs  jwt.rs  mod.rs  static_bearer.rs
rusty-gasket/src/aws/: mod.rs  s3.rs
rusty-gasket/src/db/: config.rs  extractor.rs  mod.rs  plugin.rs  transaction.rs
rusty-gasket/src/dynamodb/: config.rs  extractor.rs  mod.rs  plugin.rs
rusty-gasket/src/observability/: logging.rs  request_id.rs  security.rs  sharded.rs
rusty-gasket/src/plugin/: engine.rs  ordering.rs
rusty-gasket/src/testing/: mock_auth.rs  mod.rs  test_app.rs  test_response.rs
rusty-gasket/tests/: named_auth.rs  openapi.rs  s3_localstack.rs
scripts/: check-no-internal-refs.sh
templates/oss/: Cargo.toml  cargo-generate.toml  gasket.toml
templates/oss/src/: main.rs  routes.rs
