[workspace]
members = ["rusty-gasket", "rusty-gasket-macros", "examples/sample-api", "examples/recipe-api", "examples/bench-api"]
exclude = ["templates/oss"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/godaddy/rusty-gasket"
homepage = "https://github.com/godaddy/rusty-gasket"
version = "0.1.7"
license = "Apache-2.0"
authors = ["Jay Gowdy <jay@godaddy.com>"]
keywords = ["api", "http", "plugin", "axum", "microservice"]
categories = ["web-programming::http-server", "web-programming"]

[workspace.lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -1 }
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
derivable_impls = "warn"
match_same_arms = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
implicit_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"

[workspace.dependencies]
rusty-gasket = { version = "0.1.0", path = "rusty-gasket" }
rusty-gasket-macros = { version = "0.1.0", path = "rusty-gasket-macros" }

axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
sharded-sink = "0.1"
aws-config = { version = "1.6", default-features = false, features = ["rustls"] }
aws-sdk-secretsmanager = { version = "1.93", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
aws-sdk-dynamodb = { version = "1.98", default-features = false, features = ["rustls", "rt-tokio"] }
built = { version = "0.7", features = ["git2", "chrono"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
base64 = "0.22"
governor = "0.10"
http = "1"
http-body-util = "0.1"
memcache-async = { version = "0.10.1", default-features = false, features = ["with-tokio"] }
moka = { version = "0.12.15", features = ["future"] }
redis = { version = "1.2.2", default-features = false, features = ["connection-manager", "tokio-comp"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v7", "serde"] }

opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = "0.29"
tracing-opentelemetry = "0.30"

arc-swap = "1.7"
bytes = "1"
form_urlencoded = "1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", features = ["any", "runtime-tokio-rustls", "uuid", "time", "json", "macros", "migrate"] }
url = "2.5"
minijinja = { version = "2", features = ["loader"] }

pretty_assertions = "1.4"
serde_yaml_ng = "0.10"
