[package]
name = "sample-api"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
rusty-gasket = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rusty-gasket = { workspace = true, features = ["testing"] }
http-body-util = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { workspace = true }
